# perservant-loans

./: README.md  servant-persistent.cabal  stack.yaml
app/: Main.hs
assets/: index.html  loanAPI.js  personAPI.js  swaggerAPI.json  swaggerLoanAPI.json  swaggerPersonAPI.json
src/: Api.hs  Config.hs  Model.hs  Models.hs
src/Api/: Crud.hs  Loan.hs  Person.hs  Shared.hs
src/Model/: Loan.hs  User.hs
test/: Seed.hs
