name:                servant-persistent
version:             0.2.0.0
synopsis:            Brief example on using persistent with servant
description:         Brief example on using persistent with servant
license:             MIT
license-file:        LICENSE
author:              Matt Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matt Parsons
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
    type:
        git
    location:
        https://www.github.com/parsonsmatt/servant-persistent

executable perservant
    main-is:
        Main.hs
    build-depends:
        base >=4.7 && <4.9
      , servant-persistent
      , persistent-postgresql
      , wai
      , warp
      , monad-logger
    hs-source-dirs:
        app
    default-language:
        Haskell2010

library
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
        Config
      , Models
      , Api
      , Api.Person
      , Api.Loan
      , Api.Crud
    build-depends:
        base >= 4.7 && < 4.9
      , servant >= 0.7 && < 0.8
      , servant-server >= 0.7 && < 0.8
      , servant-js >= 0.7 && < 0.8
      , servant-swagger >= 1 && < 2
      , swagger2
      , persistent
      , persistent-postgresql
      , persistent-template
      , esqueleto
      , wai
      , bytestring
      , wai-extra
      , warp
      , aeson
      , mtl
      , text
      , safe
      , lens
      , time
      , monad-logger
      , transformers
      , bifunctors
      , monad-control

executable seed
  main-is:
      Seed.hs
  build-depends:
        base >=4.7 && <4.9
      , servant-persistent
      , persistent-postgresql
      , wai
      , warp
      , monad-logger
      , text
      , mtl
      , time
  hs-source-dirs:
      test
  default-language:
      Haskell2010

-- test-suite servant-persistent-test
--     type:
--         exitcode-stdio-1.0
--     hs-source-dirs:
--         test
--     main-is:
--         Spec.hs
--     other-modules:
--         ApiSpec
--     build-depends:
--         base
--       , servant-persistent
--       , QuickCheck
--       , hspec
--     ghc-options:
--         -threaded -rtsopts -with-rtsopts=-N
--     default-language:
--         Haskell2010
